--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Banan spil</h1>
     <p id="demo">Klik på bananen for at tjene point.</p>
-    <button onclick="minFunktion()">banan</button>
-    <img src bananpic.jpg>
+    <img src="bananpic.png" height = '256px' width ='256px' onclick="minFunktion()">
+  
   </body>
 </html>
