--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <h1>Banan spil</h1>
     <p id="demo">Klik på bananen for at tjene point.</p>
     <img src="bananpic.png" height = '256px' width ='256px' onclick="minFunktion()">
-  
+    <img src="monkey.png" height = '256px' width ='256px' onclick="buyMonkey()">
   </body>
 </html>
