--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <p id="demo">Klik på bananen for at tjene point.</p>
     <img src="bananpic.png" height = '256px' width ='256px' onclick="minFunktion()">
     <img src="monkey.png" height = '256px' width ='256px' onclick="buyMonkey()">
+    <p id="abe pris"> klik på aben for at opgradere, det koster 10 bananer </p>
   </body>
 </html>
