--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <p id="demo">Klik på bananen for at tjene point.</p>
     <img src="bananpic.png" height = '256px' width ='256px' onclick="minFunktion()">
     <img src="monkey.png" height = '256px' width ='256px' onclick="buyMonkey()">
+    <img src="BananSamlerManden.png" height = '256px' width ='256px' onclick="bananSamler()">
     <p id="abe pris"> klik på aben for at opgradere, det koster 10 bananer </p>
+    <p id="antal">  
+      <p id="antalb">   
+    <p id="BananSamleren"> klik på Banan Manden for at opgradere, det koster 80 bananer </p>
   </body>
 </html>
