--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Banan spil</title>
+    <title>Banan spillet</title>
     <script src="app.js"> </script>
   </head>
   <body>
-    <h1>Banan spil</h1>
+    <h1>Banan spillet</h1>
     <p id="demo">Klik på bananen for at tjene point.</p>
-    <img src="bananpic.png" height = '256px' width ='256px' onclick="minFunktion()">
-    <img src="monkey.png" height = '256px' width ='256px' onclick="buyMonkey()">
-    <img src="BananSamlerManden.png" height = '256px' width ='256px' onclick="bananSamler()">
-    <p id="abe pris"> klik på aben for at opgradere, det koster 10 bananer </p>
+    <img src="bananpic.png" height = '256px' width ='256px' onclick="minFunktion() + minFunktion2() + highscore() + clickCounter()">
+    <img src="monkey.png" height = '200px' width ='200px' onclick="buyMonkey()">
+    <img src="BananSamlerManden.png" height = '200px' width ='200px' onclick="bananSamler()">
     <p id="antal">  
+    <p id="abe pris"> klik på aben for at opgradere, det koster 10 bananer </p>
       <p id="antalb">   
     <p id="BananSamleren"> klik på Banan Manden for at opgradere, det koster 80 bananer </p>
+    <p id="high_s">nuværende score: 
+      <p id="highscoren1">high score:
   </body>
 </html>
