--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
   <body>
     <h1>Banan spillet</h1>
     <p id="demo">Klik på bananen for at tjene point.</p>
-    <img src="bananpic.png" height = '256px' width ='256px' onclick="minFunktion() + minFunktion2() + highscore() + clickCounter()">
+    <img src="bananpic.png" height = '256px' width ='256px' onclick="minFunktion() + minFunktion2() + highscore()">
     <img src="monkey.png" height = '200px' width ='200px' onclick="buyMonkey()">
     <img src="BananSamlerManden.png" height = '200px' width ='200px' onclick="bananSamler()">
     <p id="antal">  
     <p id="abe pris"> klik på aben for at opgradere, det koster 10 bananer </p>
       <p id="antalb">   
-    <p id="BananSamleren"> klik på Banan Manden for at opgradere, det koster 80 bananer </p>
+    <p id="BananSamleren"> klik på Banan Manden for at opgradere, det koster 20 bananer </p>
     <p id="high_s">nuværende score: 
-      <p id="highscoren1">high score:
   </body>
 </html>
+
+
+
